
  [ Sylvestre Ledru ]
  * Install omp.h in instead of /usr/lib/llvm-@LLVM_VERSION@/lib/clang/@LLVM_VERSION_FULL@/include/
    instead of /usr/lib/llvm-@LLVM_VERSION@/include/openmp/omp
  * Install split-file in llvm-X-tools (like lit)

  [ John Paul Adrian Glaubitz ]
  * Link against libatomic on mipsel to fix FTBFS in stage2
  * Link against libatomic on powerpc to fix FTBFS in stage2

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 04 Aug 2020 12:26:34 +0200

llvm-toolchain-snapshot (1:12~++20200715052739+d6e79e3dd6d-1~exp1) experimental; urgency=medium

  [ Sylvestre Ledru ]
  * Snapshot is now -12

  [ Samuel Thibault ]
  * debian/patches/hurd/hurd-EIEIO-undef.diff: Remove, upstreamed.
  * debian/patches/hurd/hurd-cxx-paths.diff: Remove, upstreamed.

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 08 Jul 2020 15:19:14 +0200

llvm-toolchain-snapshot (1:11~++20200701093119+ffee8040534-1~exp1) experimental; urgency=medium

  * New snapshot release
  * libc++ requires the LLVM_PATH, adding it
  * Remove no-z3.patch, seems to be merged upstream
  * No longer install clang-import-test (upstream change)
    See https://reviews.llvm.org/D82169

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 01 Jul 2020 09:34:28 +0200

llvm-toolchain-snapshot (1:11~++20200623122106+cd6848f6e1d-1~exp1) experimental; urgency=medium

  * experimental New snapshot release
  * Add -DLLVM_POLLY_LINK_INTO_TOOLS=OFF to workaround
    https://bugs.llvm.org/show_bug.cgi?id=45571
  * New symbol clang_Type_getValueType added
  * Install usr/lib/llvm-11/lib/cmake/lld/*.cmake
    in liblld-11-dev
  * Upstream change ad97ccf6b26a29262c9cbf5b3e7f6e84c6dcf55f
    broke clangd-atomic-cmake.patch causing some undef symbol on
    i386 and atomic
  * Also install ompt-multiplex.h in libomp-X-dev
  * revert-sphinx-deprecation.diff: revert the sphinx update as it breaks
    debian buster

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 23 Jun 2020 00:24:07 +0200
