@@ -8,6 +8,8 @@ llvm-toolchain-snapshot (1:12~++20200804122259+4be13b15d69-1~exp1) UNRELEASED; u
   [ John Paul Adrian Glaubitz ]
   * Link against libatomic on mipsel to fix FTBFS in stage2
   * Link against libatomic on powerpc to fix FTBFS in stage2
+  * Use dh-exec to exclude lib/libPolly*.a on powerpc and
+    powerpcspe from libclang-common-X.Y-dev.install.in
 
  -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 04 Aug 2020 12:26:34 +0200
 
